--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,5 +12,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
-          TIMEZONE: Asia/Taipei
+          GIST_ID: https://gist.github.com/bonnnie41/7a5ff71feca6fe7e078bdfbbe3eb6439
+          TIMEZONE: Asia/Seoul
